# Prusa-Firmware-MMU

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  version.cmake
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  pr-size.sh  pr-size.yml  stale.yml  tests.yml
cmake/: AnyAvrGcc.cmake  AvrGcc.cmake  HexConcat.cmake  ProjectVersion.cmake
lib/: AddLufa.cmake  CMakeLists.txt  Descriptors.c  Descriptors.h  lufa_config.h
lib/doctest/doctest/: doctest.h
src/: CMakeLists.txt  application.cpp  application.h  avr5.xn  cmath.h  debug.cpp  debug.h  idle_mode.cpp  idle_mode.h  intlimits.h  main.cpp  main.dox  panic.h  pins.h  registers.cpp  unit.h  version.c  version.cpp  version.h  version.hpp
src/config/: axis.h  config.h  todo.h  unit.h
src/hal/: CMakeLists.txt  _rules.txt  adc.cpp  adc.h  circle_buffer.hpp  circular_buffer.h  cpu.h  eeprom.h  gpio.h  pins.h  progmem.h  shr16.h  spi.h  timers.h  tmc2130.cpp  tmc2130.h  uart.h  usart.h  watchdog.h
src/hal/avr/: cpu.cpp  eeprom.cpp  shr16.cpp  spi.cpp  timers.cpp  tmc2130.cpp  usart.cpp  watchdog.cpp
src/logic/: CMakeLists.txt  command_base.cpp  command_base.h  cut_filament.cpp  cut_filament.h  eject_filament.cpp  eject_filament.h  error_codes.h  feed_to_bondtech.cpp  feed_to_bondtech.h  feed_to_finda.cpp  feed_to_finda.h  home.cpp  home.h  hw_sanity.cpp  hw_sanity.h  idle_mode.cpp  idle_mode.h  load_filament.cpp  load_filament.h  mm_control.cpp  mm_control.h  move_selector.cpp  move_selector.h  no_command.cpp  no_command.h  progress_codes.h  result_codes.h  retract_from_finda.cpp  retract_from_finda.h  set_mode.cpp  set_mode.h  start_up.cpp  start_up.h  tool_change.cpp  tool_change.dot  tool_change.h  unload_filament.cpp  unload_filament.dot  unload_filament.h  (+3 more)
src/modules/: CMakeLists.txt  axisunit.h  buttons.cpp  buttons.h  debouncer.cpp  debouncer.h  finda.cpp  finda.h  fsensor.cpp  fsensor.h  globals.cpp  globals.h  idler.cpp  idler.h  leds.cpp  leds.h  math.h  motion.cpp  motion.h  movable_base.cpp  movable_base.h  permanent_storage.cpp  permanent_storage.h  protocol.cpp  protocol.h  pulley.cpp  pulley.h  pulse_gen.cpp  pulse_gen.h  selector.cpp  selector.h  serial.cpp  serial.h  speed_table.cpp  speed_table.h  timebase.cpp  timebase.h  undervoltage_check.cpp  undervoltage_check.h  usb_cdc.cpp  (+4 more)
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  system_test.cpp  test_main.cpp
tests/unit/application/: CMakeLists.txt  test_application.cpp  test_registers.cpp
tests/unit/hal/: CMakeLists.txt
tests/unit/hal/circular_buffer/: CMakeLists.txt  test_circular_buffer.cpp
tests/unit/hal/progmem/: CMakeLists.txt  test_progmem.cpp
tests/unit/logic/: CMakeLists.txt
tests/unit/logic/cut_filament/: CMakeLists.txt  test_cut_filament.cpp
tests/unit/logic/eject_filament/: CMakeLists.txt  test_eject_filament.cpp
tests/unit/logic/failing_tmc/: CMakeLists.txt  test_failing_tmc.cpp
tests/unit/logic/feed_to_bondtech/: CMakeLists.txt  test_feed_to_bondtech.cpp
tests/unit/logic/feed_to_finda/: CMakeLists.txt  test_feed_to_finda.cpp
tests/unit/logic/helpers/: helpers.ipp
tests/unit/logic/homing/: CMakeLists.txt  test_homing.cpp
tests/unit/logic/load_filament/: CMakeLists.txt  test_load_filament.cpp
tests/unit/logic/no_command/: CMakeLists.txt  test_no_command.cpp
tests/unit/logic/stubs/: homing.cpp  homing.h  main_loop_stub.cpp  main_loop_stub.h  stub_motion.cpp  stub_motion.h
tests/unit/logic/tool_change/: CMakeLists.txt  test_tool_change.cpp
tests/unit/logic/unload_filament/: CMakeLists.txt  test_unload_filament.cpp
tests/unit/logic/unload_to_finda/: CMakeLists.txt  test_unload_to_finda.cpp
tests/unit/modules/: CMakeLists.txt
tests/unit/modules/buttons/: CMakeLists.txt  stub_adc.cpp  stub_adc.h  test_buttons.cpp
tests/unit/modules/leds/: CMakeLists.txt  stub_shr16.cpp  test_leds.cpp
tests/unit/modules/motion/: CMakeLists.txt  rampgen.cpp  test_motion.cpp  test_motion_ramp.py
tests/unit/modules/protocol/: CMakeLists.txt  test_protocol.cpp
tests/unit/modules/pulse_gen/: CMakeLists.txt  test_pulse_gen.cpp
tests/unit/modules/speed_table/: CMakeLists.txt  test_speed_table.cpp
tests/unit/modules/stubs/: stub_adc.cpp  stub_adc.h  stub_eeprom.cpp  stub_gpio.cpp  stub_panic.cpp  stub_serial.cpp  stub_shr16.cpp  stub_timebase.cpp  stub_timebase.h  stub_tmc2130.cpp
tests/unit/modules/timebase/: CMakeLists.txt  test_timebase.cpp
tests/unit/modules/user_input/: CMakeLists.txt  test_user_input.cpp
utils/: bootstrap.py  build.py  gcovr.py
utils/holly/: Dockerfile  Jenkinsfile
