add_subdirectory(cut_filament)

add_subdirectory(homing)

add_subdirectory(feed_to_finda)

add_subdirectory(feed_to_bondtech)

add_subdirectory(unload_to_finda)

add_subdirectory(eject_filament)

add_subdirectory(load_filament)

add_subdirectory(no_command)

add_subdirectory(tool_change)

add_subdirectory(unload_filament)

add_subdirectory(failing_tmc)
